--- a/backend/serverless/hello.yml
+++ b/backend/serverless/hello.yml
@@ -1,7 +1,7 @@
 hello:
   handler: handler.hello
   environment:
-    AWS_ENV: ${ssm:/CodeBuild/AwsAccessKey~true}
+    AWS_ENV: ${ssm:/CodeBuild/EnvName~true}
   events:
     - http:
         path: hello
